# query-perturbation

./: .flake8  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
data/: fetch_coco.sh  fetch_entities.sh  prepare_coco_entities.py
examples/: blip2_coco.yaml  blip2_flickr.yaml  qpert_blip2_flickr_ret_eval.py
notebooks/: qpert_blip2_feat_extract.ipynb
src/query_perturbation/: base_task.py  lavis_utils.py
src/query_perturbation/data/: box_loader.py  dataset_cfg.py  entities_loader.py
src/query_perturbation/models/: base_qpert.py  weight.py
src/query_perturbation/models/blip2/: __init__.py  blip2_qpert.py  patching_blip2.py  qpert_attn_forward.py  qpert_proj.py
src/query_perturbation/task/: blip2_task.py
